fix #2 - add mosaics for all artists
or a single image where i don't (yet) have enough images, on artist list
page

--- a/_includes/visiting_artists.html
+++ b/_includes/visiting_artists.html
@@ -1,17 +1,3 @@
-<div class="row">
-	<div class="six columns">
-		<img class="u-max-full-width" src="/img/artists/Contemplation-e1481967510565-200x200.jpg" />
-	</div>
-	<div class="six columns">
-		<h5>Sofia Leconte Mitev
-			&nbsp;
-		</h5>
-		<p>Works in acrylic and mixed media. Sofia has a unique perspective on her environment.</p>
-		<p>Oeuvres en acrylique et technique mixte. Sofia a une perspective unique sur son environnement.</p>
-	</div>
-</div>
-
-<hr>
 
 <div class="row">
 	<div class="three columns">
@@ -32,7 +18,7 @@
 <hr>
 
 <div class="row">
-	<div class="six columns">
+	<div class="three columns">
 		<img class="u-max-full-width" src="/img/artists/Chamonix-LacBlanc-Balcons-4123-instagram-200x200.jpg" />
 	</div>
 	<div class="six columns">
@@ -45,12 +31,15 @@
 		<p>Fine art digital photography. Emma is fascinated by the force of nature.</p>
 		<p>Oeuvres de photographie numérique. Emma a une fascination pour la force de la nature.</p>
 	</div>
+	<div class="three columns">
+		<img class="u-max-full-width" src="/img/artists/emma_mosaic.jpg" />
+	</div>
 </div>
 
 <hr>
 
 <div class="row">
-	<div class="six columns">
+	<div class="three columns">
 		<img class="u-max-full-width" src="/img/artists/Fara-head-and-shoulders-200x200.jpg" />
 	</div>
 	<div class="six columns">
@@ -60,12 +49,15 @@
 		<p>Working in oil and egg tempera, Fara's paintings have a distinctive style and colour palette.</p>
 		<p>Oeuvres en huile et tempera. Les peintures de Fara ont un style et une palette très distinctifs.</p>
 	</div>
+	<div class="three columns">
+		<img class="u-max-full-width" src="/img/artists/fara_mosaic.jpg" />
+	</div>
 </div>
 
 <hr>
 
 <div class="row">
-	<div class="six columns">
+	<div class="three columns">
 		<img class="u-max-full-width" src="/img/artists/heena-200x200.jpg" />
 	</div>
 	<div class="six columns">
@@ -76,12 +68,15 @@
 		<p>Heena creates knife works in oil, she is an expressionist, realist, and abstract artist.</p>
 		<p>Heena crée des oeuvres en huile, elle est une artiste expressionniste, réaliste et abstraite.</p>
 	</div>
+	<div class="three columns">
+		<img class="u-max-full-width" src="/img/artists/heena_mosaic.jpg" />
+	</div>
 </div>
 
 <hr>
 
 <div class="row">
-	<div class="six columns">
+	<div class="three columns">
 		<img class="u-max-full-width" src="/img/artists/will-200x200.jpg" />
 	</div>
 	<div class="six columns">
@@ -90,15 +85,18 @@
 			<a href="http://zilvermijn76.wixsite.com/artbywillemijn"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
 			<a href="mailto:artbywillemijn@gmail.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
 		</h5>
-		<p>Abstract artist working with acrylic paint in bold and bright canvas work. She brings colors and thoughts together while the paint flows in her veins.</p>
-		<p>Artiste abstrait travaillant avec de la peinture acrylique en toile lumineuse. Elle apporte des couleurs et des pensées ensemble tandis que la peinture coule dans ses veines.</p>
+		<p>Abstract artist working with acrylic paint in bold and bright canvas work.</p>
+		<p>Artiste abstrait travaillant avec de la peinture acrylique en toile lumineuse.</p>
+	</div>
+	<div class="three columns">
+		<img class="u-max-full-width" src="/img/artists/will_mosaic.jpg" />
 	</div>
 </div>
 
 <hr>
 
 <div class="row">
-	<div class="six columns">
+	<div class="three columns">
 		<img class="u-max-full-width" src="/img/artists/eva-200x200.jpg" />
 	</div>
 	<div class="six columns">
@@ -107,15 +105,18 @@
 			<a href="http://www.evalis.nl"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
 			<a href="mailto:evalis@live.nl"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
 		</h5>
-		<p>Born in the Netherlands, Eva's painting career has been truly international with extended stays and exhibitions in Africa, America, and England. The paintings of the cattle were inspired from her stay in Texas.</p>
-		<p>Née aux Pays-Bas, la carrière de peinture d'Eva a été vraiment internationale avec des expositions prolongés en Afrique, Amérique, et en Angleterre. Les peintures du bétail ont été inspirées de son séjour au Texas.</p>
+		<p>Eva's painting career has been truly international with extended stays and exhibitions in Africa, America, and England.</p>
+		<p>La carrière de peinture d'Eva a été vraiment internationale avec des expositions prolongés en Afrique, Amérique, et en Angleterre.</p>
+	</div>
+	<div class="three columns">
+		<img class="u-max-full-width" src="/img/artists/eva_mosaic.jpg" />
 	</div>
 </div>
 
 <hr>
 
 <div class="row">
-	<div class="six columns">
+	<div class="three columns">
 		<img class="u-max-full-width" src="/img/artists/christine-200x200.jpg" />
 	</div>
 	<div class="six columns">
@@ -124,15 +125,18 @@
 			<a href="http://www.cawilliamson.ch"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
 			<a href="mailto:cawilliamson@bluemail.ch"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
 		</h5>
-		<p>Christine Williamson was born in Cheshire, England, and grew up in an artistic family. When she came to Switzerland on a ski holiday, she loved it so much that eventually she came to live here permanently. She enjoys travelling round Switzerland discovering the cantons and the beautiful scenery which inspire her to paint every day.</p>
-		<p>Christine Williamson est née à Cheshire en Angleterre. Quand elle est venue en Suisse pour des vacances de ski, elle avait tellement de plaisir que quelques années plus tard elle s’est installée ici indéfiniment. Elle aime voyager pour découvrir tous les cantons suisses et les beaux paysages, une source d’inspiration qui nourrit sa pratique de peinture tous les jours.</p>
+		<p>Christine enjoys travelling around Switzerland discovering the cantons and the beautiful scenery which inspire her to paint every day.</p>
+		<p>Christine aime voyager pour découvrir tous les cantons suisses et les beaux paysages, une source d’inspiration qui nourrit sa pratique de peinture tous les jours.</p>
+	</div>
+	<div class="three columns">
+		<img class="u-max-full-width" src="/img/artists/christine_mosaic.jpg" />
 	</div>
 </div>
 
 <hr>
 
 <div class="row">
-	<div class="six columns">
+	<div class="three columns">
 		<img class="u-max-full-width" src="/img/artists/ildze-200x200.jpg" />
 	</div>
 	<div class="six columns">
@@ -142,15 +146,18 @@
 			<a href="https://www.instagram.com/ildze_ose/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
 			<a href="mailto:artinthealps@gmail.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
 		</h5>
-		<p>Ildze is an artist specializing in distinguishing your chalet with naive Swiss or imaginative scenes. Working in oil and acrylic.</p>
-		<p>Ildze est un artiste spécialisé dans la distinction de votre chalet avec des scènes naïves suisses ou imaginatives. Travailler dans l'huile et l'acrylique.</p>
+		<p>Ildze is an artist specializing in naive Swiss or imaginative scenes. Working in oil and acrylic.</p>
+		<p>Ildze est un artiste spécialisé dans des scènes naïves suisses ou imaginatives. Travailler dans l'huile et l'acrylique.</p>
+	</div>
+	<div class="three columns">
+		<img class="u-max-full-width" src="/img/artists/ildze_mosaic.jpg" />
 	</div>
 </div>
 
 <hr>
 
 <div class="row">
-	<div class="six columns">
+	<div class="three columns">
 		<img class="u-max-full-width" src="/img/artists/andre-200x200.jpg" />
 	</div>
 	<div class="six columns">
@@ -158,15 +165,18 @@
 			&nbsp;
 			<a href="http://www.andrebenoit-art.com"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
 		</h5>
-		<p>André is an artist working in multidimensional mixed media: "What may appear whimsical, distorted, or intentionally anatomically incorrect, is a reflection/function of my belief in the power of Wabi Sabi... the capacity to capture and captivate the viewer with a motion and movement created by balance and asymmetry."</p>
-		<p>André est un artiste spécialisé dans les médias mixtes multidimensionnels: « Ce que sembler capricieux, déformé, ou intentionnellement anatomiquement incorrect, est une réflexion / fonction de ma croyance en la puissance de Wabi Sabi ... la capacité de capturer et captiver le spectateur avec un mouvement et mouvement créés par l'équilibre et l'asymétrie. »</p>
+		<p>André is an artist working in multidimensional mixed media.</p>
+		<p>André est un artiste spécialisé dans les médias mixtes multidimensionnels.</p>
+	</div>
+	<div class="three columns">
+		<img class="u-max-full-width" src="/img/artists/andre_mosaic.jpg" />
 	</div>
 </div>
 
 <hr>
 
 <div class="row">
-	<div class="six columns">
+	<div class="three columns">
 		<img class="u-max-full-width" src="/img/artists/vincenzo-200x200.jpg" />
 	</div>
 	<div class="six columns">
@@ -176,7 +186,10 @@
 			<a href="https://www.instagram.com/vincenzoromanellisculptor/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
 			<a href="mailto:info@vincenzo-romanelli.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
 		</h5>
-		<p>Florentine born Sculptor Vincenzo Romanelli represents the fifth generation of Romanelli family sculptors down the male line, along with his brother Raffaello. By carving a career as a sculptor, Vincenzo is continuing a family tradition that spans nearly two centuries.</p>
-		<p>Le sculpteur d'origine florentine Vincenzo Romanelli représente la cinquième génération de sculpteurs de la famille Romanelli, avec son frère Raffaello. En sculptant une carrière de sculpteur, Vincenzo perpétue une tradition familiale qui s'étend sur près de deux siècles.</p>
+		<p>Vincenzo represents the fifth generation of Romanelli family sculptors.</p>
+		<p>Vincenzo représente la cinquième génération de sculpteurs de la famille Romanelli.</p>
+	</div>
+	<div class="three columns">
+		<img class="u-max-full-width" src="/img/artists/vincenzo_mosaic.jpg" />
 	</div>
 </div>
