new blog, clay workshops, and page for Vincenzo

--- a/_includes/main_menu.html
+++ b/_includes/main_menu.html
@@ -94,6 +94,9 @@
 			  <a class="popover-link" href="/atelier/art-classes/">Art Classes</a>
 			</li>
 			<li class="popover-item">
+			  <a class="popover-link" href="/atelier/clay-workshops/">Clay Workshops</a>
+			</li>
+			<li class="popover-item">
 			  <a class="popover-link" href="/atelier/photography/">Photography Courses</a>
 			</li>
 		  </ul>
