--- a/_includes/visiting_artists.html
+++ b/_includes/visiting_artists.html
@@ -180,7 +180,7 @@
 		<img class="u-max-full-width" src="/img/artists/vincenzo-200x200.jpg" />
 	</div>
 	<div class="six columns">
-		<h5>Vincenzo Romanelli
+		<h5><a href="/artists/vincenzo/">Vincenzo Romanelli</a>
 			&nbsp;
 			<a href="https://vincenzoromanelli.org"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
 			<a href="https://www.instagram.com/vincenzoromanellisculptor/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
