add Donna and a page for André

--- a/_includes/visiting_artists.html
+++ b/_includes/visiting_artists.html
@@ -161,7 +161,7 @@
 		<img class="u-max-full-width" src="/img/artists/andre-200x200.jpg" />
 	</div>
 	<div class="six columns">
-		<h5>André E. Benoit
+		<h5><a href="/artists/andre/">André E. Benoit</a>
 			&nbsp;
 			<a href="http://www.andrebenoit-art.com"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
 		</h5>
@@ -191,5 +191,25 @@
 	</div>
 	<div class="three columns">
 		<img class="u-max-full-width" src="/img/artists/vincenzo_mosaic.jpg" />
+	</div>
+</div>
+
+<hr>
+
+<div class="row">
+	<div class="three columns">
+		<img class="u-max-full-width" src="/img/artists/donna-200x200.jpg" />
+	</div>
+	<div class="six columns">
+		<h5>Donna Stevens
+			&nbsp;
+			<a href="http://goldendoeart.com/"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+			<a href="mailto:donna@goldendoeart.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+		</h5>
+		<p>Golden Doe hats are hand knitted from soft natural wools. They suit fun, free-spirited individuals.</p>
+		<p>Golden Doe chapeaux sont tricotés à la main. Ils conviennent à des personnes libres d'esprit.</p>
+	</div>
+	<div class="three columns">
+		<img class="u-max-full-width" src="/img/artists/donna_mosaic.jpg" />
 	</div>
 </div>
