add Dora to visiting artists include

--- a/_includes/visiting_artists.html
+++ b/_includes/visiting_artists.html
@@ -213,3 +213,23 @@
 		<img class="u-max-full-width" src="/img/artists/donna_mosaic.jpg" />
 	</div>
 </div>
+
+<hr>
+
+<div class="row">
+	<div class="three columns">
+		<img class="u-max-full-width" src="/img/artists/dora-200x200.jpg" />
+	</div>
+	<div class="six columns">
+		<h5>Dora Fraissinet
+			&nbsp;
+			<a href="https://www.dora-fraissinet.com/"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+			<a href="mailto:dorafraissinet@gmail.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+		</h5>
+		<p>After a childhood shared between Provence, Switzerland and Savoy, Dora devoted herself to the realization of interior perspectives in watercolor.</p>
+		<p>Après une enfance partagée entre la Provence, la Suisse et la Savoie, Dora s'est-elle consacrée à la réalisation de perspectives d’intérieur à l'aquarelle.</p>
+	</div>
+	<div class="three columns">
+		<img class="u-max-full-width" src="/img/artists/dora_mosaic.jpg" />
+	</div>
+</div>
