--- a/_includes/visiting_artists.html
+++ b/_includes/visiting_artists.html
@@ -204,10 +204,11 @@
 		<h5>Donna Stevens
 			&nbsp;
 			<a href="http://goldendoeart.com/"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+			<a href="https://www.instagram.com/Goldendoeart/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
 			<a href="mailto:donna@goldendoeart.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
 		</h5>
-		<p>Golden Doe hats are hand knitted from soft natural wools. They suit fun, free-spirited individuals.</p>
-		<p>Golden Doe chapeaux sont tricotés à la main. Ils conviennent à des personnes libres d'esprit.</p>
+		<p>A textile artist who works with natural materials such as merino wool and cashmere creating colourful slouchy beanies entirely by hand.</p>
+		<p>Une artiste textile qui travaille avec des matières naturelles telles que la laine mérinos et le cachemire pour créer des bonnets souples colorés entièrement à la main.</p>
 	</div>
 	<div class="three columns">
 		<img class="u-max-full-width" src="/img/artists/donna_mosaic.jpg" />
