--- a/_includes/main_menu.html
+++ b/_includes/main_menu.html
@@ -83,6 +83,9 @@
 			<li class="popover-item">
 			  <a class="popover-link" href="/artists/visiting-artists/">Visiting Artists</a>
 			</li>
+			<li class="popover-item">
+			  <a class="popover-link" href="/artists/previous-artists/">Previous Artists</a>
+			</li>
 		  </ul>
 		</div>
 	  </li>
