--- a/_includes/visiting_artists.html
+++ b/_includes/visiting_artists.html
@@ -173,3 +173,24 @@
 		<img class="u-max-full-width" src="/img/artists/jessica_mosaic.jpg" />
 	</div>
 </div>
+
+<hr>
+
+<div class="row">
+	<div class="three columns">
+		<img class="u-max-full-width" src="/img/artists/nadine-200x200.jpg" />
+	</div>
+	<div class="six columns">
+		<h6><b>Nadine | The Burrow of Bells</b>
+			&nbsp;
+			<a href="https://www.theburrowofbells.com/"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+			<a href="https://www.instagram.com/theburrowofbells/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
+			<a href="mailto:theburrowofbells@yahoo.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+		</h6>
+		<p>Local Swiss illustrator from Chesières, who draws in great detail and colour while using watercolours, graphite and India ink.</p>
+		<p>Illustratrice suissesse de Chesières, qui dessine avec beaucoup de detail et couleur en travaillante avec des aquarelles, du graphite et d’encre du chine.</p>
+	</div>
+	<div class="three columns">
+		<img class="u-max-full-width" src="/img/artists/nadine_mosaic.jpg" />
+	</div>
+</div>
