update artist pages

--- a/_includes/previous_artists.html
+++ b/_includes/previous_artists.html
@@ -76,3 +76,23 @@
 		<img class="u-max-full-width" src="/img/artists/dora_mosaic.jpg" />
 	</div>
 </div>
+
+<hr>
+
+<div class="row">
+	<div class="three columns">
+		<img class="u-max-full-width" src="/img/artists/jessica-200x200.jpg" />
+	</div>
+	<div class="six columns">
+		<h5><a href="/artists/jessica/">Jessica Raymond</a>
+			&nbsp;
+			<a href="https://www.instagram.com/vachementbizarre/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
+		</h5>
+		<p>I wanted to modernize this ancestral art by creating atypical, modern paintings with a hint of humor</p>
+		<p>J’ai voulu moderniser un peu cet art ancestral en créant des tableaux atypiques, modernes avec une pointe d’humour</p>
+	</div>
+	<div class="three columns">
+		<img class="u-max-full-width" src="/img/artists/jessica_mosaic.jpg" />
+	</div>
+</div>
+
