--- a/_includes/visiting_artists.html
+++ b/_includes/visiting_artists.html
@@ -159,18 +159,19 @@
 
 <div class="row">
 	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/jessica-200x200.jpg" />
+		<img class="u-max-full-width" src="/img/artists/helene-200x200.jpg" />
 	</div>
 	<div class="six columns">
-		<h5><a href="/artists/jessica/">Jessica Raymond</a>
+		<h5>Hélène Calise
 			&nbsp;
-			<a href="https://www.instagram.com/vachementbizarre/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
+			<a href="http://www.chcreation.ch"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+			<a href="https://www.instagram.com/helenechcreation/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
 		</h5>
-		<p>I wanted to modernize this ancestral art by creating atypical, modern paintings with a hint of humor</p>
-		<p>J’ai voulu moderniser un peu cet art ancestral en créant des tableaux atypiques, modernes avec une pointe d’humour</p>
+		<p>Hélène is an artist specializing in the creation of paintings made with wood and expresses through them her love for nature and the world and invites you to rediscover wood in a different way.</p>
+		<p>Hélène est une artiste spécialisée dans la création de tableaux réalisés avec du bois et exprime à travers eux son amour de la nature et du monde et vous invite à redécouvrir le bois autrement.</p>
 	</div>
 	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/jessica_mosaic.jpg" />
+		<img class="u-max-full-width" src="/img/artists/helene_mosaic.jpg" />
 	</div>
 </div>
 
