--- a/_includes/visiting_artists.html
+++ b/_includes/visiting_artists.html
@@ -166,6 +166,7 @@
 			&nbsp;
 			<a href="http://www.chcreation.ch"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
 			<a href="https://www.instagram.com/helenechcreation/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
+			<a href="mailto:helene@chcreation.ch"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
 		</h5>
 		<p>Hélène is an artist specializing in the creation of paintings made with wood and expresses through them her love for nature and the world and invites you to rediscover wood in a different way.</p>
 		<p>Hélène est une artiste spécialisée dans la création de tableaux réalisés avec du bois et exprime à travers eux son amour de la nature et du monde et vous invite à redécouvrir le bois autrement.</p>
