--- a/_includes/visiting_artists.html
+++ b/_includes/visiting_artists.html
@@ -180,19 +180,46 @@
 
 <div class="row">
 	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/nadine-200x200.jpg" />
+		<img class="u-max-full-width" src="/img/artists/bao-200x200.jpg" />
 	</div>
 	<div class="six columns">
-		<h6><b>Nadine | The Burrow of Bells</b>
+		<h5>Bao-Khang Luu
 			&nbsp;
-			<a href="https://www.theburrowofbells.com/"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
-			<a href="https://www.instagram.com/theburrowofbells/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
-			<a href="mailto:theburrowofbells@yahoo.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
-		</h6>
-		<p>Local Swiss illustrator from Chesières, who draws in great detail and colour while using watercolours, graphite and India ink.</p>
-		<p>Illustratrice suissesse de Chesières, qui dessine avec beaucoup de detail et couleur en travaillante avec des aquarelles, du graphite et d’encre du chine.</p>
+			<a href="https://www.baokhangluu.com/"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+			<a href="https://www.instagram.com/baokhangluuart/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
+			<a href="mailto:bao@baokhangluu.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+		</h5>
+		<p>Bao posits that everything has an inherent beauty and intrinsic value. His works focus on overlooked and discarded materials, injecting high design into humble materials.</p>
+		<p>Bao affirme que tout a une beauté et une valeur intrinsèque. Ses travaux se concentrent sur les matériaux négligés et jetés, pour injecter un design de haut niveau dans des matériaux pauvres et ordinaires.</p>
 	</div>
 	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/nadine_mosaic.jpg" />
+		<img class="u-max-full-width" src="/img/artists/blank-200x200.jpg" />
 	</div>
 </div>
+
+<!--
+<hr>
+
+<div class="row">
+	<div class="three columns">
+		<img class="u-max-full-width" src="/img/artists/blank-200x200.jpg" />
+	</div>
+	<div class="six columns">
+		<h5>Peter Chapman
+			&nbsp;
+-->
+			<!--
+			<a href="https://www.baokhangluu.com/"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+			<a href="https://www.instagram.com/baokhangluuart/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
+			<a href="mailto:bao@baokhangluu.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+			-->
+<!--
+		</h5>
+		<p></p>
+		<p></p>
+	</div>
+	<div class="three columns">
+		<img class="u-max-full-width" src="/img/artists/pete_mosaic.jpg" />
+	</div>
+</div>
+-->
