--- a/_includes/visiting_artists.html
+++ b/_includes/visiting_artists.html
@@ -197,7 +197,6 @@
 	</div>
 </div>
 
-<!--
 <hr>
 
 <div class="row">
@@ -207,19 +206,16 @@
 	<div class="six columns">
 		<h5>Peter Chapman
 			&nbsp;
--->
 			<!--
 			<a href="https://www.baokhangluu.com/"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
 			<a href="https://www.instagram.com/baokhangluuart/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
 			<a href="mailto:bao@baokhangluu.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
 			-->
-<!--
 		</h5>
-		<p></p>
-		<p></p>
+		<p>Peter Chapman is an English artist and schoolteacher who has lived in Villars since 2010. Inspired by the mountains of Switzerland and the seascapes of his home country, he uses the medium of watercolour to convey the tone, light and feeling of these magnificent surroundings.</p>
+		<p>Peter Chapman est un artiste anglais et professeur qui vit à Villars depuis 2010. Inspiré par les montagnes de Suisse et les paysages marins de son pays d’origine, il utilise le médium de l’aquarelle pour transmettre le ton, la lumière et le sentiment de ces magnifiques environnements.</p>
 	</div>
 	<div class="three columns">
 		<img class="u-max-full-width" src="/img/artists/pete_mosaic.jpg" />
 	</div>
 </div>
--->
