update atelier information posters

--- a/_includes/art_classes_posters.html
+++ b/_includes/art_classes_posters.html
@@ -1,12 +1,12 @@
 <div class="row">
 	<div class="six columns">
-		<a href="/img/atelier/art-classes/a5_poster_for_art_classes_2019b.jpg">
-			<img class="u-max-full-width" src="/img/atelier/art-classes/a5_poster_for_art_classes_2019b.jpg" />
+		<a href="/img/atelier/art-classes/Insta_Atelier_kids_poster.jpg">
+			<img class="u-max-full-width" src="/img/atelier/art-classes/Insta_Atelier_kids_poster.jpg" />
 		</a>
 	</div>
 	<div class="six columns">
-		<a href="/img/atelier/art-classes/kids_poster_2019a.jpg">
-			<img class="u-max-full-width" src="/img/atelier/art-classes/kids_poster_2019a.jpg" />
+		<a href="/img/atelier/art-classes/Insta_Atelier_kids_poster_EN.jpg">
+			<img class="u-max-full-width" src="/img/atelier/art-classes/Insta_Atelier_kids_poster_EN.jpg" />
 		</a>
 	</div>
 </div>
@@ -14,9 +14,14 @@
 <br />
 
 <div class="row">
-	<div class="twelve columns">
-		<a href="/img/atelier/art-classes/atelier_member_hours_2019b.jpg">
-			<img class="u-max-full-width" src="/img/atelier/art-classes/atelier_member_hours_2019b.jpg" />
+	<div class="six columns">
+		<a href="/img/atelier/art-classes/Insta_Atelier_times.jpg">
+			<img class="u-max-full-width" src="/img/atelier/art-classes/Insta_Atelier_times.jpg" />
+		</a>
+	</div>
+	<div class="six columns">
+		<a href="/img/atelier/art-classes/A5_Poster_for_Adult_art_classes_2019.jpg">
+			<img class="u-max-full-width" src="/img/atelier/art-classes/A5_Poster_for_Adult_art_classes_2019.jpg" />
 		</a>
 	</div>
 </div>
