--- a/_includes/previous_artists.html
+++ b/_includes/previous_artists.html
@@ -1,118 +1,100 @@
+<div class="artists">
 
-<div class="row">
-	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/Chamonix-LacBlanc-Balcons-4123-instagram-200x200.jpg" />
+	<div class="row">
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/Chamonix-LacBlanc-Balcons-4123-instagram-200x200.jpg" />
+		</div>
+		<div class="six columns">
+			<h5>Emma Godfrey Pigott
+				&nbsp;
+				<a href="http://www.emmagodfrey.com"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+				<a href="https://www.instagram.com/emmagodfreyportraiture/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
+				<a href="mailto:em@emmagodfrey.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+			</h5>
+			<p>Fine art digital photography. Emma is fascinated by the force of nature.</p>
+			<p>Oeuvres de photographie numérique. Emma a une fascination pour la force de la nature.</p>
+		</div>
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/emma_mosaic.jpg" />
+		</div>
 	</div>
-	<div class="six columns">
-		<h5>Emma Godfrey Pigott
-			&nbsp;
-			<a href="http://www.emmagodfrey.com"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
-			<a href="https://www.instagram.com/emmagodfreyportraiture/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
-			<a href="mailto:em@emmagodfrey.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
-		</h5>
-		<p>Fine art digital photography. Emma is fascinated by the force of nature.</p>
-		<p>Oeuvres de photographie numérique. Emma a une fascination pour la force de la nature.</p>
-	</div>
-	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/emma_mosaic.jpg" />
-	</div>
-</div>
 
-<hr>
+	<hr>
 
-<div class="row">
-	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/Fara-head-and-shoulders-200x200.jpg" />
+	<div class="row">
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/Fara-head-and-shoulders-200x200.jpg" />
+		</div>
+		<div class="six columns">
+			<h5>Fara Torrance
+				&nbsp;
+			</h5>
+			<p>Working in oil and egg tempera, Fara's paintings have a distinctive style and colour palette.</p>
+			<p>Oeuvres en huile et tempera. Les peintures de Fara ont un style et une palette très distinctifs.</p>
+		</div>
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/fara_mosaic.jpg" />
+		</div>
 	</div>
-	<div class="six columns">
-		<h5>Fara Torrance
-			&nbsp;
-		</h5>
-		<p>Working in oil and egg tempera, Fara's paintings have a distinctive style and colour palette.</p>
-		<p>Oeuvres en huile et tempera. Les peintures de Fara ont un style et une palette très distinctifs.</p>
-	</div>
-	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/fara_mosaic.jpg" />
-	</div>
-</div>
 
-<hr>
+	<hr>
 
-<div class="row">
-	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/donna-200x200.jpg" />
+	<div class="row">
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/dora-200x200.jpg" />
+		</div>
+		<div class="six columns">
+			<h5>Dora Fraissinet
+				&nbsp;
+				<a href="https://www.dora-fraissinet.com/"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+				<a href="mailto:dorafraissinet@gmail.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+			</h5>
+			<p>After a childhood shared between Provence, Switzerland and Savoy, Dora devoted herself to the realization of interior perspectives in watercolor.</p>
+			<p>Après une enfance partagée entre la Provence, la Suisse et la Savoie, Dora s'est-elle consacrée à la réalisation de perspectives d’intérieur à l'aquarelle.</p>
+		</div>
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/dora_mosaic.jpg" />
+		</div>
 	</div>
-	<div class="six columns">
-		<h5>Donna Stevens
-			&nbsp;
-			<a href="http://goldendoeart.com/"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
-			<a href="https://www.instagram.com/Goldendoeart/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
-			<a href="mailto:donna@goldendoeart.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
-		</h5>
-		<p>A textile artist who works with natural materials such as merino wool and cashmere creating colourful slouchy beanies entirely by hand.</p>
-		<p>Une artiste textile qui travaille avec des matières naturelles telles que la laine mérinos et le cachemire pour créer des bonnets souples colorés entièrement à la main.</p>
-	</div>
-	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/donna_mosaic.jpg" />
-	</div>
-</div>
 
-<hr>
+	<hr>
 
-<div class="row">
-	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/dora-200x200.jpg" />
+	<div class="row">
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/jessica-200x200.jpg" />
+		</div>
+		<div class="six columns">
+			<h5><a href="/artists/jessica/">Jessica Raymond</a>
+				&nbsp;
+				<a href="https://www.instagram.com/vachementbizarre/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
+			</h5>
+			<p>I wanted to modernize this ancestral art by creating atypical, modern paintings with a hint of humor</p>
+			<p>J’ai voulu moderniser un peu cet art ancestral en créant des tableaux atypiques, modernes avec une pointe d’humour</p>
+		</div>
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/jessica_mosaic.jpg" />
+		</div>
 	</div>
-	<div class="six columns">
-		<h5>Dora Fraissinet
-			&nbsp;
-			<a href="https://www.dora-fraissinet.com/"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
-			<a href="mailto:dorafraissinet@gmail.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
-		</h5>
-		<p>After a childhood shared between Provence, Switzerland and Savoy, Dora devoted herself to the realization of interior perspectives in watercolor.</p>
-		<p>Après une enfance partagée entre la Provence, la Suisse et la Savoie, Dora s'est-elle consacrée à la réalisation de perspectives d’intérieur à l'aquarelle.</p>
-	</div>
-	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/dora_mosaic.jpg" />
-	</div>
-</div>
 
-<hr>
+	<hr>
 
-<div class="row">
-	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/jessica-200x200.jpg" />
+	<div class="row">
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/nadine-200x200.jpg" />
+		</div>
+		<div class="six columns">
+			<h6><b>Nadine | The Burrow of Bells</b>
+				&nbsp;
+				<a href="https://www.theburrowofbells.com/"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+				<a href="https://www.instagram.com/theburrowofbells/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
+				<a href="mailto:theburrowofbells@yahoo.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+			</h6>
+			<p>Local Swiss illustrator from Chesières, who draws in great detail and colour while using watercolours, graphite and India ink.</p>
+			<p>Illustratrice suissesse de Chesières, qui dessine avec beaucoup de detail et couleur en travaillante avec des aquarelles, du graphite et d’encre du chine.</p>
+		</div>
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/nadine_mosaic.jpg" />
+		</div>
 	</div>
-	<div class="six columns">
-		<h5><a href="/artists/jessica/">Jessica Raymond</a>
-			&nbsp;
-			<a href="https://www.instagram.com/vachementbizarre/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
-		</h5>
-		<p>I wanted to modernize this ancestral art by creating atypical, modern paintings with a hint of humor</p>
-		<p>J’ai voulu moderniser un peu cet art ancestral en créant des tableaux atypiques, modernes avec une pointe d’humour</p>
-	</div>
-	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/jessica_mosaic.jpg" />
-	</div>
-</div>
 
-<hr>
-
-<div class="row">
-	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/nadine-200x200.jpg" />
-	</div>
-	<div class="six columns">
-		<h6><b>Nadine | The Burrow of Bells</b>
-			&nbsp;
-			<a href="https://www.theburrowofbells.com/"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
-			<a href="https://www.instagram.com/theburrowofbells/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
-			<a href="mailto:theburrowofbells@yahoo.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
-		</h6>
-		<p>Local Swiss illustrator from Chesières, who draws in great detail and colour while using watercolours, graphite and India ink.</p>
-		<p>Illustratrice suissesse de Chesières, qui dessine avec beaucoup de detail et couleur en travaillante avec des aquarelles, du graphite et d’encre du chine.</p>
-	</div>
-	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/nadine_mosaic.jpg" />
-	</div>
 </div>
