--- a/_includes/header.html
+++ b/_includes/header.html
@@ -75,4 +75,13 @@
 		google.maps.event.addDomListener(window, 'load', initialize);
 	</script>
 	{% endif %}
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-EC6FLF4MZ0"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	  gtag('config', 'G-EC6FLF4MZ0');
+	</script>
 </head>
