--- a/_includes/previous_artists.html
+++ b/_includes/previous_artists.html
@@ -97,4 +97,69 @@
 		</div>
 	</div>
 
+	<hr>
+
+	<div class="row">
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/helene-200x200.jpg" />
+		</div>
+		<div class="six columns">
+			<h5>Hélène Calise
+				&nbsp;
+				<a href="http://www.chcreation.ch"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+				<a href="https://www.instagram.com/helenechcreation/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
+				<a href="mailto:helene@chcreation.ch"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+			</h5>
+			<p>Hélène is an artist specializing in the creation of paintings made with wood and expresses through them her love for nature and the world and invites you to rediscover wood in a different way.</p>
+			<p>Hélène est une artiste spécialisée dans la création de tableaux réalisés avec du bois et exprime à travers eux son amour de la nature et du monde et vous invite à redécouvrir le bois autrement.</p>
+		</div>
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/helene_mosaic.jpg" />
+		</div>
+	</div>
+
+	<hr>
+
+	<div class="row">
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/donna-200x200.jpg" />
+		</div>
+		<div class="six columns">
+			<h5><a href="/artists/donna/">Donna Stevens</a>
+				&nbsp;
+				<a href="http://goldendoeart.com/"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+				<a href="https://www.instagram.com/Goldendoeart/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
+				<a href="mailto:donna@goldendoeart.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+			</h5>
+			<p>Inspired by the richness of colours, shades, and tones, Donna’s photographs don’t propose to document reality but rather light paint the sense of awe and freedom that outside spaces bestow.</p>
+			<p>La nature a été une source d'inspiration pour la photographie de Donna. Pourtant, son travail ne propose pas de documenter la réalité mais plutôt de peindre à la lumière le sentiment d'émerveillement et de liberté que les espaces extérieurs confèrent.</p>
+		</div>
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/donna_mosaic.jpg" />
+		</div>
+	</div>
+
+	<hr>
+
+	<div class="row">
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/blank-200x200.jpg" />
+		</div>
+		<div class="six columns">
+			<h5>Peter Chapman
+				&nbsp;
+				<!--
+				<a href="https://www.baokhangluu.com/"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+				<a href="https://www.instagram.com/baokhangluuart/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
+				<a href="mailto:bao@baokhangluu.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+				-->
+			</h5>
+			<p>Inspired by the mountains of Switzerland and the seascapes of his home country, he uses the medium of watercolour to convey the tone, light and feeling of these magnificent surroundings.</p>
+			<p>Inspiré par les montagnes de Suisse et les paysages marins de son pays d’origine, il utilise le médium de l’aquarelle pour transmettre le ton, la lumière et le sentiment de ces magnifiques environnements.</p>
+		</div>
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/pete_mosaic.jpg" />
+		</div>
+	</div>
+
 </div>
