add work image for Danny

--- a/_includes/visiting_artists.html
+++ b/_includes/visiting_artists.html
@@ -219,7 +219,7 @@
 			entièrement numériques.</p>
 		</div>
 		<div class="three columns">
-			<!-- <img class="u-max-full-width" src="/img/artists/dora_mosaic.jpg" /> -->
+			<img class="u-max-full-width" src="/img/artists/danny_mosaic.jpg" />
 		</div>
 	</div>
 
